# resume-builder

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  git_guide.md  main.py  pyproject.toml
app/: main.py
app/agents/: agents.py  graph.py
app/core/: auth.py  database.py
app/pages/: builder.py
app/services/: pdf_generator.py
app/ui/: components.py
k8s/: application.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
monitoring/: setup.sh
test/: dep_fetch.py  repo_project_description.py  repos_fetch.py  test_basic.py
